Bug 1035067 - Don't hint we expect a track if we're not going to receive it. r=ehugg, a=lmandel